--- a/readme
+++ b/readme
@@ -1,1 +1,12 @@
 
+<img width="501" height="231" alt="Image" src="https://github.com/user-attachments/assets/b362a77f-423b-4d52-bb50-757e89705b05" />
+
+## Translation Arabic Pegon Handwriten into Latin
+
+Arabic Pegon is a historic Indonesian script that emerged by adapting the Arabic alphabet to the phonetics of the Javanese language, originally created to simplify the spread of Islam across the region.
+
+
+# Tool:
+Cleaning Dataset → CorelDraw
+Google collab → training Dataset → Google Collab
+App → HTML, Flask
